Fix concept map border and overlapping issues

--- a/src/frontend/scss/concepts.scss
+++ b/src/frontend/scss/concepts.scss
@@ -1,9 +1,8 @@
 #topicmap {
   height: 600px;
-  position:relative;
-  width:100%;
-  height:100%;
-  border: solid 1px #ddd;
+  position: relative;
+  width: 100%;
+  height: 100%;
 }
 
 #topic-svg {
@@ -14,8 +13,7 @@
 }
 
 #conceptContainer {
-  margin-bottom: 5px;
-  height:600px;
+  height: 600px;
 }
 
 .nodes circle {
@@ -24,86 +22,86 @@
   cursor: pointer;
 }
 .links path {
-  cursor:pointer;
+  cursor: pointer;
 }
 .boundary circle {
   stroke: #ccc;
   fill: none;
 }
 .labels text {
-  cursor:pointer;
-  font-weight:bold;
+  cursor: pointer;
+  font-weight: bold;
 }
 .topic-message-container {
-  position:absolute;
-  width:100%;
-  top:0;
-  left:0;
-  height:34px;
+  position: absolute;
+  width: 100%;
+  top: 0;
+  left: 0;
+  height: 34px;
   background-color: #eee;
-  display:none;
-  z-index:10;
+  display: none;
+  z-index: 10;
 }
 .topic-message-buttons {
   white-space: nowrap;
 }
 .topic-messages {
-  width:97%;
-  float:left;
+  width: 97%;
+  float: left;
 }
 .topic-messages .table {
   margin-bottom: unset;
 }
 .topic-messages td {
-  padding:.15rem;
+  padding: 0.15rem;
 }
 .topic-messages .btn {
   vertical-align: unset;
 }
 .topic-messages .btn-sm {
-  padding: .25rem .3rem;
+  padding: 0.25rem 0.3rem;
 }
 .topic-messages table {
-  width:100%;
+  width: 100%;
 }
 .topic-message-close {
-  width:3%;
+  width: 3%;
   text-align: center;
-  cursor:pointer;
-  float:right;
-  height:100%;
+  cursor: pointer;
+  float: right;
+  height: 100%;
 }
 .topic-message-close:hover {
   background-color: #ddd;
 }
 @keyframes shadowPulse {
-    0% {
-      background-color:#bbb;
-    }
-    25% {
-      background-color:#ccc;
-    }
-    75% {
-      background-color:#ddd;
-    }
-    100% {
-      background-color:#eee;
-    }
+  0% {
+    background-color: #bbb;
+  }
+  25% {
+    background-color: #ccc;
+  }
+  75% {
+    background-color: #ddd;
+  }
+  100% {
+    background-color: #eee;
+  }
 }
 .shadow-pulse {
-    animation-name: shadowPulse;
-    animation-duration: 0.5s;
-    animation-iteration-count: 1;
-    animation-timing-function: ease-out;
+  animation-name: shadowPulse;
+  animation-duration: 0.5s;
+  animation-iteration-count: 1;
+  animation-timing-function: ease-out;
 }
 
-#topicControls{
+#topicControls {
   margin-bottom: 5px;
 }
 
 #topicSearch .tt-dropdown-menu {
-  max-height:150px;
-  overflow-y:auto;
+  max-height: 150px;
+  overflow-y: auto;
 }
 
 .typeahead,
@@ -127,12 +125,12 @@
 }
 
 .tt-hint {
-  color: #999
+  color: #999;
 }
 
 .tt-menu {
-  max-height:150px;
-  overflow-y:auto;
+  max-height: 150px;
+  overflow-y: auto;
   width: 300px;
   margin: 12px 0;
   padding: 8px 0;
@@ -155,14 +153,12 @@
 .tt-suggestion.tt-cursor {
   color: #fff;
   background-color: #0097cf;
-
 }
 
 .tt-suggestion p {
   margin: 0;
 }
 
-.tt-dataset{
-  padding-left:12px;
+.tt-dataset {
+  padding-left: 12px;
 }
-
